# maps.tardis.digital

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CI_INTEGRATION_SUMMARY.md  ISSUES_TECHNICAL_SUMMARY.md  LICENSE  PR_CREATION_GUIDE.md  PR_REVIEW_SUMMARY.md  README.md  create_issues.sh  issues.yaml
.act/: actrc
.github/: dependabot.yml
.github/workflow/: build-frontend.yml  build.yml
.github/workflows/: build-frontend.yml  build.yml  deploy.yml  visual-regression.yml
.sisyphus/: ralph-loop.local.md
backend/: .gitignore  README.md  activate_venv.sh  config.json  docker-compose.yml  package.json
backend/api/: Dockerfile  alembic.ini  pyproject.toml
backend/api/alembic/: env.py  script.py.mako
backend/api/alembic/versions/: 001_create_martin_functions.py  002_enable_row_level_security.py
backend/api/app/: __init__.py  config.py  main.py
backend/api/app/core/: __init__.py  cache.py  database.py  keycloak.py  logging.py  openapi.py  rate_limit.py  rlsmiddleware.py  security.py  security_headers.py  sentry.py  users.py
backend/api/app/models/: __init__.py  geometry.py  layer.py  project.py  source.py  user.py
backend/api/app/routes/: __init__.py  auth_keycloak.py  geometry.py  jobs.py  layers.py  nl_query.py  projects.py  sources.py  users.py
backend/api/app/schemas/: __init__.py  common.py  geometry.py  layer.py  project.py  source.py
backend/api/app/services/: tiler.py  vector_search.py
backend/api/app/tasks/: celery_app.py  etl_tasks.py  websocket_manager.py
backend/api/tests/: __init__.py  conftest.py  test_geometry.py  test_keycloak.py  test_layers.py  test_openapi.py  test_projects.py  test_rate_limit.py  test_sources.py  test_users.py
backend/core-monolith/: Dockerfile  requirements.txt  sample.env
backend/etl/: get_caps.py  get_wfs.py  gmlh2geojson.js  gridInference.py  merge.py  trainandinfer.py  trainandinferusinggpu.py  vectorize.py
backend/etl-service/: Dockerfile  pyproject.toml
backend/etl-service/app/: __init__.py  config.py  enrichment.py  insights.py  main.py  whatif.py
backend/etl-service/app/core/: __init__.py
backend/etl-service/app/models/: __init__.py  task.py
backend/etl-service/app/routes/: __init__.py  tasks.py
backend/etl-service/app/self_healing/: __init__.py
backend/geo_engine/: Cargo.toml  pyproject.toml
backend/geo_engine/src/: lib.rs
backend/geo_engine/src/geometry/: mod.rs  parser.rs
backend/geo_engine/src/import/: csv.rs  mod.rs
backend/micros/pip/: Cargo.toml  Dockerfile
backend/micros/pip/src/: api.rs  ispip.rs  main.rs  point.rs
frontend/: .env  .env.development  .eslintrc.js  .gitignore  .parcelrc  .prettierignore  .prettierrc  README.md  config.overrides.js  cors.json  eslint.config.js  index.html  index.js  jest.config.js  package-lock.json  package.json  playwright-test.d.ts  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js
frontend/e2e/: visual-regression.spec.ts
frontend/src/: App.css  App.tsx  index.css  index.html  index.tsx  main.tsx  styles.css  types.d.ts
frontend/wasm-pip/: Cargo.toml  README.md  index.ts
frontend/wasm-pip/pkg/: maps_pip_wasm.d.ts
frontend/wasm-pip/src/: lib.rs
infra/: .gitignore  .terraform.lock.hcl  HOT_RELOAD_GUIDE.md  README.md  Readme copy.md  Readme.md  TURNKEY_DEPLOYMENT.md  cloud.tf  deploy.sh  dev-logs.sh  docker-compose.dev.yml  install.sh  kustomization.yaml  martin-config.yaml  nginx.dev.conf  setup-hot-reload.sh  start-dev.sh  start.sh  stop-dev.sh  variables.tf
infra/auth/: keycloak-deployment.yaml  keycloak-postgres.yaml  keycloak-realm.yaml  keycloak-service.yaml  kustomization.yaml
infra/base/: kustomization.yaml  namespace.yaml  secrets.yaml  storage-class.yaml
infra/cache/: kustomization.yaml  redis-deployment.yaml  redis-service.yaml
infra/core/: api-deployment.yaml  core-deployment.yaml  core-ingress.yaml  core-service.yaml  kustomization.yaml
infra/database/: kustomization.yaml  postgres-pvc.yaml  (+7 more)
(+265 files in other folders)
